Clean up index-benchmark useless test classes